--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 />
               </div>
               <div class="col-8">
-                <h3></h3>
+                <h3>Innayah Afiza Qulbi</h3>
                 
                 <p>
                   Putri dari Bpk. Yulianto <br />
