--- a/index.html
+++ b/index.html
@@ -322,12 +322,12 @@
             <a
               href="img/Gallery/1.jpg"
               data-toggle="lightbox"
-              data-caption="tarwin & mela"
+              data-caption="Danu & Innayah"
               data-gallery="mygallery"
             >
               <img
                 src="img/Gallery/thumbnail/1.jpg"
-                alt="tarwin & mela"
+                alt="Danu & Innayah"
                 class="img-fluid w-100 rounded"
               />
             </a>
@@ -336,12 +336,12 @@
             <a
               href="img/Gallery/2.jpg"
               data-toggle="lightbox"
-              data-caption="tarwin & mela"
+              data-caption="Danu & Innayah"
               data-gallery="mygallery"
             >
               <img
                 src="img/Gallery/thumbnail/2.jpg"
-                alt="tarwin & mela"
+                alt="Danu & Innayah"
                 class="img-fluid w-100 rounded"
               />
             </a>
@@ -350,12 +350,12 @@
             <a
               href="img/Gallery/3.jpg"
               data-toggle="lightbox"
-              data-caption="tarwin & mela"
+              data-caption="Danu & Innayah"
               data-gallery="mygallery"
             >
               <img
                 src="img/Gallery/thumbnail/3.jpg"
-                alt="tarwin & mela"
+                alt="Danu & Innayah"
                 class="img-fluid w-100 rounded"
               />
             </a>
