--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h3>Mulai Serius</h3>
-                    <span>28 Oktober 2023</span>
+                    <span>09 September 2023</span>
                   </div>
                   <div class="timeline-body">
                     <p>
@@ -288,7 +288,7 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h3>Tunangan</h3>
-                    <span>10 November 2023</span>
+                    <span>02 Desember 2023</span>
                   </div>
                   <div class="timeline-body">
                     <p>
