--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
               <li>
                 <div
                   class="timeline-image"
-                  style="background-image: url(img/padang.jpg)"
+                  style="background-image: url(img/padang.jpeg)"
                 ></div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
