--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div class="row">
               <div class="col-4">
                 <img
-                  src="img/wanita.JPG"
+                  src="20240528_153141.jpg"
                   alt="Innayah Afiza Qulbi"
                   class="img-responsive rounded-circle"
                 />
